<resources>
    <string name="app_name">PDS</string>

    <!--    activityLogin-->
    <string name="activityLogin_txt_tolbar">Hallo my app PDS</string>
    <string name="activityLogin_EitText_email">Email</string>
    <string name="activityLogin_EitText_password">pleas enter your password</string>
    <string name="activityLogin_Button_login">Login</string>
    <string name="activityLogin_Button_registe">Register </string>


    <!--    RegisterActivity-->

    <string name="activityRegister_TextView_container">base information</string>
    <string name="activityRegister_EitText_userName">Full Name</string>
    <string name="activityRegister_EitText_email">Email</string>
    <string name="activityRegister_EitText_password">Password</string>
    <string name="activityRegister_EitText_ConfirmPassword"> Confirm password</string>
    <string name="activityRegister_btn_Choose_Age"> choose the bron dat</string>
    <string name="activityRegister_EitText_Age">Date of birth</string>
    <string name="activityRegister_EitText_Address"> Address</string>
    <string name="activityRegister_Button_save">save</string>


    <!--    dashboard_user-->
    <string name="dashboard_user_image_top_TextView">PDS App</string>

    <string name="dashboard_user_cardView_TextView_appointment1">appointment</string>
    <string name="dashboard_user_cardView_TextView_appointment2">your appointment</string>

    <string name="dashboard_user_cardView_TextView_show_appointment">Show_appointment</string>
    <string name="dashboard_user_cardView_TextView_show_appointment2">Available</string>

    <string name="dashboard_user_cardView_TextView_MedicalReport1"> Medical Report </string>
    <string name="dashboard_user_cardView_TextView_MedicalReport2">View Medical Report </string>
    <string name="dashboard_Doctor_cardView_TextView_MedicalReport2"> Add Medical Report</string>

    <string name="dashboard_user_cardView_TextView_Profile1"> My profile  </string>
    <string name="dashboard_user_cardView_TextView_Profile2"> View My profile   </string>


    <!--    chooseDoctor-->
    <string name="chooseDoctor_TextView_doctorName">doctor name</string>
    <string name="chooseDoctor_TextView_doctorSpecialization">specialization</string>
    <string name="textView_chooseDoctor_Functional_section">Functional section </string>
    <string name="textView_chooseDoctor_doctorEmail">doctor Email </string>
    <string name="chooseDoctor_btn_doctorViewInfo">view More information of the doctor</string>
    <string name="chooseDoctor_btn_doctorViewInfo2">view lise information of the doctor</string>

    <!--    choosePatient-->
    <string name="choosePatient_TextView_PatientName">Patient name: </string>
    <string name="choosePatient_TextView_PatientPron">pron:</string>
    <string name="choosePatient_TextView_PatientEmail">Email: </string>
    <string name="choosePatient_TextView_PatientAddress">Address:</string>
    <string name="choosePatient_btn_PatientViewInfo">view information of the Patient</string>
    <string name="choosePatient_btn_PatientViewInfo2">view lise information of the Patient</string>

    <!--    NewDoctorActivity-->
    <string name="activityNewDoctor_TextView_container">base information</string>
    <string name="activityNewDoctor_TextView_container1">specialization information</string>
    <string name="activityNewDoctor_EitText_Specialization">specialization</string>
    <string name="activityRegister_EitText_Functional_section">functional section</string>
    <string name="activityNewDoctor_EitText_About_the_doctor">About the doctor</string>

    <!--    BookAppointment-->
    <string name="BookAppointment_TextView_top">Reason For The Appointment</string>
    <string name="BookAppointment_EitText_reasonAppointment">Reason For The Appointment</string>
    <string name="BookAppointment_EitText_DateAppointment">Appointment Date</string>
    <string name="BookAppointment_EitText_TimeAppointment">Appointment Time</string>
    <string name="BookAppointment_EitText_descriptionAppointment">Appointment description</string>
    <string name="BookAppointment_Button_choose_date_time">Choose the appointment date</string>

    <!--    ShowAppointmentUser-->

    <string name="ShowAppointmentUser_textView_appointment_reason">Appointment Reason:</string>
    <string name="ShowAppointmentUse_textView_appointment_date">Appointment Date:</string>
    <string name="textView_appointment_Time">Appointment Time:</string>
    <string name="ShowAppointmentUser_textView_appointment_description">Appointment description:</string>
    <string name="ShowAppointmentUser_textView_ToolbarAppointment">يمكنك الإطلاع على المواعيد التي قمت بحجزها</string>
    <string name="ShowAppointmentUser_btn_doctorViewInfo">view More information</string>
    <string name="ShowAppointmentUser_btn_doctorViewInfo2">view lise information of the Appointment</string>

    <!--    dashboardDoctor-->
    <string name="dashboardDoctor_TextView_appointment1">appointments</string>
    <string name="dashboardDoctor_TextView_appointment2"> manage appointments
</string>
    <!--    AvailableAppointmentsActivity-->
    <string name="AvailableAppointmentsActivity_TextView_topView">Welcome to the activity of selecting the available appointments</string>
    <string name="AvailableAppointmentsActivity_TextView_container">Available appointments </string>
    <string name="AvailableAppointmentsActivity_Button_AddDate">Add date of appointment</string>
    <string name="AvailableAppointmentsActivity_Button_AddTime">Add time of appointment</string>

    <!--  ChooosAvailableAppointmentsActivity-->
    <string name="ChooseAvailableAppointmentsActivity_TextView_topView">You can choose an appointment from the list of available doctor appointments</string>
    <string name="ChooseAvailableAppointmentsActivity_TextView_date">Date:</string>
    <string name="ChooseAvailableAppointmentsActivity_TextView_time">Time:</string>
    <!--  ShowDoctorAvailableAppointmentsActivity-->
    <string name="ShowDoctorAvailableAppointmentsActivity_TextView"> Available doctor appointments</string>


    <!--    MedicalReport-->
    <string name="MedicalReport_EditText_ReportTitle">Report Title</string>
    <string name="MedicalReport_EditText_ReportDetails">Report Details</string>
    <string name="MedicalReport_EditText_DoctorsInstructions">instructions</string>
    <string name="MedicalReport_EditText_SuggestedMedication"> SuggestedMedication </string>

    <string name="AddReportButton">Add report for patient</string>
    <string name="ShowReportButton">Show my report</string>

    <!--    ShowMedicalReport-->
    <string name="ShowMedicalReport_TextView_ReportTitle">Report Title</string>
    <string name="ShowMedicalReport_TextView__ReportDetails">Report Details:</string>
    <string name="ShowMedicalReport_TextView_DoctorsInstructions">instruction:</string>
    <string name="ShowMedicalReport_TextView_SuggestedMedication">Medications:</string>

    <!--    Patient Appointment Fragment-->
    <string name="PatientAppointmentFragment_TextView_Welcome">Welcome Back</string>
    <string name="PatientAppointmentFragment_TextView_Appointment">Appointments</string>
    <string name="PatientAppointmentFragment_TextView_Appointment1">Add Your Appointments</string>
    <string name="PatientAppointmentFragment_TextView_NEWAppointment1">New Appointment</string>
    <string name="PatientAppointmentFragment_TextView_ShowAppointment1">Show Appointments</string>


    <!--    Patient Appointment Fragment-->
    <string name="AppointmentFragment_TextView_Welcome">You Welcome</string>
    <string name="AppointmentFragment_TextView_Appointment">Appointments</string>
    <string name="AppointmentFragment_TextView_Appointment1">Your Appointments</string>
    <string name="AppointmentFragment_TextView_NEWAppointment1">New Appointment</string>
    <string name="AppointmentFragment_TextView_ShowAppointment1">Show Available Appointments</string>


    <!--  MideclalReportFragment-->
    <string name="MedicalReportReportFragment_TextView_welcome">you welcome in window</string>
    <string name="MedicalReportFragment_TextView1">Mideclal Report </string>
    <string name="UserMedicalReportFragment_TextVie2"> can you view your MedicalReport </string>
    <string name="DoctorMedicalReportFragment_TextVie2"> Add MedicalReport of the patients </string>


    <!--  UserProfile-->
    <string name="UserProfile_TextView_welcome">Welcome your Profile</string>
    <string name="UserProfile_Btn_edit_profile">Edit your Profile</string>
    <string name="UserProfile_Btn_ViewAppointments">View Appointments </string>
    <string name="UserProfile_Btn_ViewMedicalReport">View Medical Report  </string>
    <string name="DoctorProfile_btn_add_new_doctor">Add new doctor</string>


    <!--Languge-->
    <string name="LangugeActivity_txtview">Can you change the language  </string>
    <string name="LangugeActivity_btn_ar">Arabic </string>
    <string name="LangugeActivity_btn_en">English </string>

    <!--Home_menu-->
    <string name="Home_menu_Home">Home</string>
    <string name="Home_menu_Appointments">Appointments</string>
    <string name="Home_menu_MedicalReport">MedicalReport</string>
    <string name="Home_menu_language">language</string>
    <string name="Home_menu_management">  User management"</string>
    <string name="Home_menu_MyProfile">MyProfile</string>
    <string name="Home_menu_Logout">Logout</string>
    <!--search_menu-->
    <string name="search_menu">search</string>

    <!--Notification-->
    <string name="TitleNotification">patients and Doctors Services App</string>
    <string name="TextNotificationAppointment">An appointment has been booked for you at the doctor, click to view it  </string>
    <string name="pendingIntentNotificationAppointment">Open appointment list </string>
    <string name="TextNotificationAvailableAppointments">An available appointment has been created for patients to book with you. Click to view</string>
    <string name="pendingIntentNotificationAvailableAppointments">Open the list of your available appointments </string>
    <string name="TextNotificationReport">A medical report has been created successfully, click to view it </string>
    <string name="pendingIntentNotificationReport">Open the list of your medical reports </string>
    //permission
    <string name="Not_permission">You do not have permission to enter </string>


</resources>
