<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".ui.Activities.LanguagActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="313dp"
            android:layout_height="103dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            android:text="@string/LangugeActivity_txtview"
            android:textColor="@color/white"
            android:textSize="@dimen/_26ssp" />

        <Button
            android:id="@+id/Language_btn_ar"

            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_50sdp"
            android:drawableEnd="@drawable/ic_language"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:text="@string/LangugeActivity_btn_ar"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16ssp"
            app:cornerRadius="@dimen/_10sdp" />

        <Button
            android:id="@+id/Language_btn_en"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_50sdp"
            android:drawableEnd="@drawable/ic_language"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:text="@string/LangugeActivity_btn_en"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16ssp"
            app:cornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>