<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Activities.NewDoctorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <View

        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@drawable/wave2_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />


    <ImageView
        android:id="@+id/activityNewDoctor_icon_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/appBarLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/activityNewDoctor_imageView_doctor"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:background="@drawable/shap_register_imgv_user"
        android:padding="@dimen/_3sdp"
        android:src="@drawable/doctor8"
        app:layout_constraintBottom_toTopOf="@+id/container11"
        app:layout_constraintEnd_toEndOf="@+id/container11"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/container11"
        app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/activityNewDoctor_imageView_doctor"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/activityNewDoctor_imageView_doctor"
            app:layout_constraintTop_toTopOf="@+id/appBarLayout"
            app:layout_constraintVertical_bias="0.39"
            app:srcCompat="@drawable/ic_add" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/activityNewDoctor_imageView_doctor"
            app:layout_constraintEnd_toStartOf="@+id/activityNewDoctor_imageView_doctor" />





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/shap_activity_login_cardview"
                android:orientation="vertical"
                android:id="@+id/container11"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:elevation="@dimen/_10sdp"
                android:padding="@dimen/_1sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activityNewDoctor_TextView_container"                    android:layout_marginStart="@dimen/_100sdp"
                    android:layout_margin="@dimen/_3sdp"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/shap_activity_login_cardview"
                    android:textSize="@dimen/_24ssp"/>

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_18ssp"
                    android:text="admin" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_3sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activityNewDoctor_EitText_doctorName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_icon_user1"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/activityRegister_EitText_userName"
                        android:padding="@dimen/_20sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activityNewDoctor_EitText_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_icon_email1"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/activityRegister_EitText_email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_20sdp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activityNewDoctor_EitText_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_icon_key"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/activityRegister_EitText_password"
                        android:inputType="textPassword"
                        android:padding="@dimen/_20sdp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activityNewDoctor_EitText_ConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_check"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/activityRegister_EitText_ConfirmPassword"
                        android:inputType="textPassword"
                        android:padding="@dimen/_20sdp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp">

                    <Button
                        android:id="@+id/activityNewDoctor_btn_Choose_Age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_5sdp"
                        android:drawableEnd="@drawable/ic_add_circle"
                        android:drawablePadding="@dimen/_5sdp"
                        android:text="@string/activityRegister_btn_Choose_Age"
                        android:textSize="@dimen/_18ssp"
                        app:cornerRadius="@dimen/_15sdp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activityNewDoctor_EitText_Age"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_icon_calendar"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/activityRegister_EitText_Age"
                        android:enabled="false"
                        android:padding="@dimen/_20sdp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activityNewDoctor_EitText_Address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_icon_location"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/activityRegister_EitText_Address"
                        android:padding="@dimen/_20sdp" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_3sdp"
                    android:layout_marginStart="@dimen/_100sdp"
                    android:gravity="center"
                    android:text="@string/activityNewDoctor_TextView_container1"
                    android:background="@drawable/shap_activity_login_cardview"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_24ssp"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activityNewDoctor_EitText_Specialization"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_icon_address_book"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/activityNewDoctor_EitText_Specialization"
                        android:padding="@dimen/_20sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activityNewDoctor_EitText_Functional_section"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_iconsave_disk"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/activityRegister_EitText_Functional_section"
                        android:padding="@dimen/_20sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activityNewDoctor_EitText_About_the_doctor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_iconbookmark"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/activityNewDoctor_EitText_About_the_doctor"
                        android:padding="@dimen/_20sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/activityLogin_Button_login"
                    android:layout_width="@dimen/_160sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/activityRegister_Button_save"
                    android:onClick="DoctorRegister"
                    android:textSize="@dimen/_20ssp"
                    app:cornerRadius="@dimen/_10sdp" />
            </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>